# linux-backup-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  backup-manager.py  installer.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.example.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  FAQ.md  INSTALL.md  INTERNATIONALIZATION.md  QA_TESTPLAN.md  RECOVERY.md  RESTORE.md  ROADMAP.md  SYSTEMD.md  TUTORIAL.md  USER_GUIDE.md  qa-testplan-v1.0.md
docs/de/: CONFIGURATION.md  FAQ.md  INSTALL.md  README.md  RECOVERY.md  RESTORE.md  SYSTEMD.md  TUTORIAL.md  USER_GUIDE.md
src/lbm/: __init__.py  __main__.py  log_config.py
src/lbm/backup/: restic.py
src/lbm/cli/: error_handler.py  help_renderer.py  main.py  menu.py
src/lbm/core/: application.py  config.py  errors.py  state.py
src/lbm/health/: checks.py
src/lbm/resources/: config.example.yaml
src/lbm/setup/: wizard.py
src/linux_backup_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_backup_state.py  test_cli.py  test_cli_help.py  test_config_transfer.py  test_doctor.py  test_error_handling.py  test_health_checks.py  test_i18n_cli.py  test_installer.py  test_language.py  test_logs.py  test_menu.py  test_password_change.py  test_recovery.py  test_restic_repository.py  test_restore_mount.py  test_scheduler.py  test_services.py  test_setup_wizard.py  test_status.py  test_system_utils.py  test_usb_target.py  test_utils.py
tests/sample-data/: test1.txt  test2.txt  test3.txt
(+21 files in other folders)
