[project]
name = "linux-backup-manager"
version = "1.0.0"
description = "Backup-Manager für Linux-Systeme mit Restic, Timeshift und mehreren Backup-Zielen"
requires-python = ">=3.12"

dependencies = [
    "PyYAML",
    "pydantic>=2",
]

[project.scripts]
backup-manager = "lbm.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
