[project]
name = "linux-backup-manager"
version = "1.2.0rc1"
description = "Backup-Manager für Linux-Systeme mit Restic und mehreren Backup-Zielen"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Marcel Saager" }]
requires-python = ">=3.12"

dependencies = [
    "PyYAML",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "build>=1",
    "pytest>=8",
    "ruff>=0.9",
    "twine>=6",
]

[project.scripts]
backup-manager = "lbm.cli.main:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.package-data]
"lbm.resources" = ["config.example.yaml", "i18n/*.yaml"]
